変数の宣言をletからconstに修正

--- a/03.asynchronous/fetch.html
+++ b/03.asynchronous/fetch.html
@@ -10,7 +10,7 @@
     <script>
       async function fetchHtml(url) {
         const response = await fetch(url);
-        let html = await response.text();
+        const html = await response.text();
         console.log(html);
       }
       fetchHtml("https://bootcamp.fjord.jp/");
